# optic_cad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ilst_cpp_and_h.py
CMake_для_Easy3d/: CMakeLists.txt
goptical/: CMakeLists.txt
goptical/data/canon-rf-50mmf1.2/: canon-rf-50mmf1.2.txt
goptical/data/cosina-35mm-f1.2/: JP2004-101880_Example02P.txt
goptical/data/leica-sl-90-280/: JP2016-139125_Example01P.txt
goptical/data/leitz-r-summilux-50mmf1.4/: leitz-r-summilux-50mmf1.4.txt
goptical/data/nikkor-120-300mm-f2.8/: JP2020-177057_Example01P.txt
goptical/data/nikkor-200-500mm/: JP2014-209144_Example02P.txt
goptical/data/nikkor-300mm-f2.8-vrii/: JP2015-102734_Example01MLP.txt
goptical/data/nikkor-300mm-f4.5-ed/: US004154508_Example02.txt
goptical/data/nikkor-300mm-f4.5-ed-1970/: US3774991_Example02.txt
goptical/data/nikkor-400mm-f2.8E/: JP2019-152887_Example03P-Nikon-400mm-f2.8FL.txt
goptical/data/nikkor-50mm-f1.8ais/: nikkor-50mm-f1.8ais.txt
goptical/data/nikkor-70-300mm/: US20190353880_Example01P.txt
goptical/data/nikkor-80-400mm/: US20200049962_Example01P.txt
goptical/data/nikkor-f-200mm-micro/: nikkor-200mm-micro.txt
goptical/data/nikkor-f-58mmf1.4/: nikkor-f-58mmf1.4-ex2.txt
goptical/data/nikkor-z-35mmf1.8/: nikkor-z-35mmf1.8.txt
goptical/data/nikkor-z-50mmf1.8/: nikkor-z-50mmf1.8.txt
goptical/data/sigma-40mm-f1.4/: Sigma-40mmf1.4.txt
goptical/data/sony-50mm-f1.4/: WO2017-138250_Example02P.txt
goptical/doc/: conventions.mkdoc
goptical/doc/texinfo/: goptical.texi
goptical/documentation/: goptical-manual.rst  goptical-reference.rst
goptical/include/goptical/core/: common.hpp  delegate.hpp  error.hpp  fstring  vector_pool  vlarray
goptical/include/goptical/core/analysis/: focus.hpp  pointimage.hpp  rayfan.hpp  spot.hpp
goptical/include/goptical/core/curve/: array.hpp  base.hpp  composer.hpp  conic.hpp  conic_base.hpp  curve_asphere.hpp  curve_roc.hpp  flat.hpp  foucault.hpp  grid.hpp  parabola.hpp  polynomial.hpp  rotational.hpp  sphere.hpp  spline.hpp  zernike.hpp
goptical/include/goptical/core/data/: data_interpolate_1d.hpp  discrete_set.hpp  grid.hpp  plot.hpp  plotdata.hpp  sample_set.hpp  set.hpp  set1d.hpp
goptical/include/goptical/core/io/: export.hpp  import.hpp  import_bclaff.hpp  renderer.hpp  renderer_2d.hpp  renderer_axes.hpp  renderer_svg.hpp  renderer_viewport.hpp  rgb.hpp
goptical/include/goptical/core/light/: ray.hpp  spectral_line.hpp
goptical/include/goptical/core/material/: abbe.hpp  air.hpp  base.hpp  catalog.hpp  conrady.hpp  dielectric.hpp  dispersion_table.hpp  herzberger.hpp  metal.hpp  mil.hpp  mirror.hpp  proxy.hpp  schott.hpp  sellmeier.hpp  sellmeiermod.hpp  solid.hpp  vacuum.hpp
goptical/include/goptical/core/math/: matrix.hpp  quaternion.hpp  transform.hpp  triangle.hpp  vector.hpp  vector_pair.hpp
goptical/include/goptical/core/shape/: base.hpp  composer.hpp  disk.hpp  ellipse.hpp  elliptical_ring.hpp  infinite.hpp  polygon.hpp  rectangle.hpp  regular_polygon.hpp  ring.hpp  shape_round.hpp
goptical/include/goptical/core/sys/: container.hpp  element.hpp  group.hpp  image.hpp  lens.hpp  mirror.hpp  optical_surface.hpp  source.hpp  source_disk.hpp  source_point.hpp  source_rays.hpp  stop.hpp  surface.hpp  (+1 more)
goptical/include/goptical/design/: common.hpp
goptical/include/gsl/: gsl_deriv.h  gsl_fit.h  gsl_math.h
goptical/src/: CMakeLists.txt
goptical/src/core/: CMakeLists.txt  analysis_focus.cpp  analysis_pointimage.cpp  analysis_rayfan.cpp  analysis_spot.cpp  curve_array.cpp  curve_asphere.cpp  curve_base.cpp  curve_composer.cpp  curve_conic.cpp  curve_conic_base.cpp  curve_flat.cpp  curve_foucault.cpp  curve_grid.cpp  curve_parabola.cpp  curve_polynomial.cpp  curve_rotational.cpp  curve_sphere.cpp  curve_spline.cpp  data_discrete_set.cpp  data_grid.cpp  data_interpolate_1d_.hxx  data_plot.cpp  data_sample_set.cpp  data_set.cpp  data_set1d.cpp  deriv.c  drand48.cpp  ffs.c  io_import_bclaff.cpp  io_renderer.cpp  io_renderer_2d.cpp  io_renderer_axes.cpp  io_renderer_svg.cpp  io_renderer_viewport.cpp  io_rgb.cpp  light_ray.cpp  light_spectral_line.cpp  linear.c  material_abbe.cpp  (+44 more)
goptical/src/design/: telescope_cassegrain.cpp  telescope_newton.cpp
imgui/: CMakeLists.txt
src/: io_renderer_easy3d.cpp  main.cpp  mesh_builder.cpp  optical_system.cpp  optical_system.h  renderer_easy3d.hpp  viewer.cpp  viewer.h
(+9 files in other folders)
